@@ -17,6 +17,8 @@
 //--------------------------------------------------------------
 // Note 1: Value is a config switch (on/off, yes/no or 1/0)
 // Note 2: Value is in percents (100 means 100%)
+// Note 3: Value is a bit field. If no description is given,
+//         assume unit types (1: Pc, 2: Mob, 4: Pet, 8: Homun, 16: Mercenary)
 //--------------------------------------------------------------
 
 // Set here which client version do you accept. Add all values of clients:
@@ -85,6 +87,12 @@ max_lv: 99
 //          will be sent as being all level 98, and only characters with level
 //          150 or more will be reported as having level 99 and show an aura.
 aura_lv: 99
+
+// Units types affected by max_lv and aura_lv settings. (Note 3)
+// Note: If an unit type, which normally does not show an aura, is
+//       set it will obtain an aura when it meets the level requirement.
+// Default: 0 (none)
+client_limit_unit_lv: 0
 
 // Will tuxedo and wedding dresses be shown when worn? (Note 1)
 wedding_modifydisplay: no
